# mcp-proxy-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.demo  README.md  docker-compose.yml  smoke-test-http-to-stdio-proxy.sh  smoke-test-stdio-to-http-proxy.sh
.github/workflows/: release.yml
src/: cli.rs  config_loader.rs  http_client.rs  lib.rs  main.rs  proxy_server.rs
tests/: test_proxy_server.rs
