[package]
name = "mcp-proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
http = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "rustls", "stream"] }
rmcp = { version = "1.8.0", features = ["server", "client", "macros", "schemars", "transport-io", "transport-child-process", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "signal", "io-std", "fs", "net", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
